5.1
    + Based on Ubuntu 16.04.4
5.0.1
    + Based on Ubuntu 16.04.3
    + UEFI support
    + Include all video drivers to fix boot with GUI in HyperV, KVM or other hardware
5.0
    + Based on Ubuntu 16.04.2
4.2
    + Based on Ubuntu 14.04.3
    + Support for newer network cards with non-ethX default iface names
4.1
    + Based on Ubuntu 14.04.2
4.0
    + Allow server subscriptions with several bundles but all of the same type
    + Set versions and repos to 4.0
3.5
    + Use Server Password to get the conf backup list
    + Fix error message when trying to use DR with no commercial edition
    + Fixed firefox-launcher
3.4
    + Fix parsing of the json when asking for the available server to recover
    + On a registration error, show error returned by remote
    + Update edition messages
    + Fix parsing of the json when asking for the available bundles
3.3
    + Set versions and repos to 3.3
    + Remove commercial edition options as 3.3 is community-only
3.2
    + Updated logos
3.1-2
    + Avoid the need of customization in the lxdm upstart script
3.1
    + New headless mode
    + Add a path for extra custom packages not available in Ubuntu repos
3.0-2
    + Based on Ubuntu 12.04.2
    + Use new generic-lts-quantal kernel for both i386 and amd64
    + Add a setting to include Zentyal Remote udeb
    + Run zentyal-custom scripts from core-install for custom installers
3.0-1
    + Possibility to install a commercial edition providing credentials
    + New set-debug.sh for fully automated installation with custom
      preseeding from debug.vars file
    + Do not install recommends for coherency with zentyal-software
2.3-rc2
    + Based on Ubuntu 12.04.1
    + Automatic removal of duplicated and unneeded packages
    + Fixed problems when choosing XFS in expert mode
2.3-1
    + Ask only for username, not for full name
    + Link packages to cache to avoid downloading them
2.3
    + Zentyal desktop launcher now works if server port has changed