@@ -3,8 +3,8 @@ zentyal-all
 language-packs-zentyal-all
 zenbuntu-core
 zenbuntu-desktop
-linux-generic
-linux-headers-generic
+linux-generic-hwe-16.04
+linux-headers-generic-hwe-16.04
 console-cyrillic
 xfsprogs
 grub-efi-amd64
