@@ -1,9 +1,9 @@
 default install
 LABEL install
   menu label ^TEST AUTOINSTALL
-  kernel /install/vmlinuz
+  kernel /install/hwe-vmlinuz
   append locale=en_US console-setup/ask_detect=false keyboard-configuration/layoutcode=es file=/cdrom/preseed/ubuntu-server-debug.seed vga=788 initrd=/install/initrd.gz quiet --
 LABEL recover
   menu label ^TEST AUTORECOVER
-  kernel /install/vmlinuz
+  kernel /install/hwe-vmlinuz
   append locale=en_US console-setup/ask_detect=false keyboard-configuration/layoutcode=es file=/cdrom/preseed/disaster-recovery-debug.seed vga=788 initrd=/install/initrd.gz quiet --
