@@ -1,12 +1,12 @@
 default install
 label install
   menu label ^Install Zentyal VERSION (delete all disk)
-  kernel /install/vmlinuz
-  append  file=/cdrom/preseed/ubuntu-server-auto.seed vga=788 initrd=/install/initrd.gz ipv6.disable=1 net.ifnames=0 biosdevname=0 quiet --
+  kernel /install/hwe-vmlinuz
+  append  file=/cdrom/preseed/ubuntu-server-auto.seed vga=788 initrd=/install/hwe-initrd.gz ipv6.disable=1 net.ifnames=0 biosdevname=0 quiet --
 label expert
   menu label ^Install Zentyal VERSION (expert mode)
-  kernel /install/vmlinuz
-  append  file=/cdrom/preseed/ubuntu-server.seed vga=788 initrd=/install/initrd.gz ipv6.disable=1 net.ifnames=0 biosdevname=0 quiet --
+  kernel /install/hwe-vmlinuz
+  append  file=/cdrom/preseed/ubuntu-server.seed vga=788 initrd=/install/hwe-initrd.gz ipv6.disable=1 net.ifnames=0 biosdevname=0 quiet --
 #label disaster
 #  menu label ^Recover from a disaster (delete all disk)
 #  kernel /install/vmlinuz
