@@ -4,6 +4,9 @@
 ## zentyal stuff
 ##
 
+# use HWE kernel
+d-i  base-installer/kernel/altmeta string hwe-16.04
+
 # add zentyal repository
 d-i apt-setup/local0/repository string http://archive.zentyal.org/zentyal 5.1 main extra
 d-i apt-setup/local0/key string http://keys.zentyal.org/zentyal-5.1-archive.asc
