@@ -1,5 +1,6 @@
 5.1
     + Based on Ubuntu 16.04.4
+    + Use HWE kernel by default
 5.0.1
     + Based on Ubuntu 16.04.3
     + UEFI support
